# sanitize

./: .gitignore  .justfile  Cargo.toml  README.md  tea.yaml
.github/workflows/: check-and-lint.yaml  release-packaging.yaml  test.yml
src/: clap.rs  config.rs  main.rs
src/args/: mod.rs
src/config/: from_matches.rs  mod.rs
src/execution/: from_config.rs  mod.rs  run.rs
src/logger/: log.rs  loglevel.rs  mod.rs
src/tests/: clap.rs  execution.rs  logger.rs  mod.rs
